Imagem restaurada, ainda apresenta erro.

--- a/HTML/Exercicios/KhanAcadeny/DesafioUmaViagemPerfeita.html
+++ b/HTML/Exercicios/KhanAcadeny/DesafioUmaViagemPerfeita.html
@@ -115,6 +115,7 @@
                     <p>
 
                         Chegando aqui você ainda está curioso para saber qual é minha praia secreta? <br> Bom, o único lugar em que ela está escondida, é nesse roteiro. É uma praia, talvez não muito conhecida, mas acessível.<br>
+                        <center><img src="https://www.kasandbox.org/programming-images/avatars/starky-sapling.png"alt="Essa ´é minha praia secreta! Procure a sua."width="100"></center>
 
                     </p>
 
